# docs/swagger.json
@@ -19,6 +19,38 @@
                 }
             }
         },
+        "/login": {
+            "post": {
+                "tags": [
+                    "登录"
+                ],
+                "summary": "登录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"massage\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "get": {
                 "tags": [
@@ -56,7 +88,7 @@
                     {
                         "type": "string",
                         "description": "密码",
-                        "name": "passworld",
+                        "name": "password",
                         "in": "formData"
                     },
                     {
@@ -97,14 +129,14 @@
                     {
                         "type": "string",
                         "description": "密码",
-                        "name": "passworld",
+                        "name": "password",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "确认密码",
-                        "name": "repassworld",
+                        "name": "repassword",
                         "in": "formData",
                         "required": true
                     },
